Fix homepage layout problems

--- a/client/src/pages/Homepage/Homepage.module.scss
+++ b/client/src/pages/Homepage/Homepage.module.scss
@@ -8,6 +8,10 @@
   background-size: cover;
   background-position: center;
   padding: 2.5rem 5rem;
+
+  @include respond($bp-small) {
+    padding: 2.5rem 3rem;
+  }
 }
 
 .homepage section {
@@ -25,6 +29,12 @@
   line-height: 1.3;
 
   animation: fadeIn 1.3s ease-in-out;
+
+  span {
+    @include respond($bp-small) {
+      display: none;
+    }
+  }
 }
 
 .homepage h2 {
